== Git

* Minor enhancements

  * have_tag and the corresponding asserts work outside of merb, including selenium mode. (Amos King) 
  * Support Sinatra 0.9 (Harry Vangberg)
  * Update query param parsing to work with latest Edge Rails
  
* Bug fixes

  * Switch to using selenium.click instead of .check when checking a checkbox
    (Noah Davis)
  * Create tmp/pids directory if directory does not exist. (Amos King and Mike Gaffney)  
  * Setup deprecated writers for the selenium_environment= and selenium_port= config
  * Ensure the previous pages params aren't passed through redirect
  * Labels should only search for fields within the current scope (Kyle Hargraves)

== 0.4.0 / 2009-01-18

* _IMPORTANT_ Breaking change:

  * Removed init.rb auto-require of webrat/rails
  * Removed auto-require of webrat/rails when requiring webrat when RAILS_ENV is
    defined

  In your env.rb or test_helper.rb file, ensure you have something like:

    require "webrat"

    Webrat.configure do |config|
      config.mode = :rails
    end

* Major enhancements

  * Major improvements to Webrat::Selenium (Many contributors listed here)
  * Add assert_* methods for using Webrat's matchers w/o RSpec (Mike Gaffney, Amos King)
  * Added Webrat.configure method for Webrat configuration [#33] (Mike Gaffney)
  * Added select_time, select_date, and select_datetime to API. [#36] (Ben Mabey)
  * Use Hpricot and REXML when not parsing with Nokogiri (on JRuby, for example)

* Minor enhancements

  * Added Selenium grid configuration and support. (Amos King && Cornel Borcean)
  * Support passing an ActiveRecord model to #within when in Rails mode [#68] (Luke Melia)
  * Make assert_* matchers in rails mode increment the assertions count [#123] (Amos King)
  * Added assert_* matchers to selenium matchers [#110] (Amos King)
  * Added assert_contain, assert_not_contain [#86] (Mike Gaffney, Amos King)
  * Add configuration options for the Selenium environment and port (Kieran Pilkington)